docker + API completelty working enabled. ToDo: Graph plotting

--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
+    "@syncfusion/ej2-react-charts": "^19.1.67",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.3.2",
     "cors": "^2.8.5",
     "firebase": "^8.3.1",
     "http-proxy-middleware": "^0.19.1",
+    "plotly.js": "^1.58.4",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-plotly.js": "^2.5.1",
     "react-router-dom": "^5.2.0",
     "react-routing-dom": "^1.0.0",
     "react-scripts": "4.0.3",
